PGW-98: Print sales filter alignment fixed

--- a/sites/all/themes/tpg_theme/sass/components/page-elements/_print-sales.scss
+++ b/sites/all/themes/tpg_theme/sass/components/page-elements/_print-sales.scss
@@ -14,6 +14,11 @@
 
   .view-filters {
     @include make-md-column(8);
+    padding-top: 0;
+
+    label {
+      font-size: $p-sm;
+    }
 
     form,
     &.clonned {
